fixed the hero being cut off short by the content below

--- a/css/templates.css
+++ b/css/templates.css
@@ -37,10 +37,10 @@ body,
 .content{
 	background-color: #fff;
 }
-.content {
+/*.content {
     position: relative;
     top: -20px;
-}
+}*/
 .section-block{
 	width: 100%;
 	position: relative;
